--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav class="navbar navbar-light bg-dark justify-content-center align-items-center">
-      <a class="navbar-brand" href="https://github.com/Wooniety/Github-Workshop">
+      <a class="navbar-brand" href="https://github.com/milimalism/">
         <i class="fa fa-github" style="font-size:48px;color:white"></i>
       </a>
     </nav>
